# xarm_control_isaac

./: README.md
xarm_camera_control_moveit/: .setup_assistant  CMakeLists.txt  package.xml
xarm_camera_control_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  xarm7_urdf.srdf
xarm_camera_control_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  (+5 more)
xarm_control/: .rosinstall  CMakeLists.txt  package.xml  requirements.txt
xarm_control/config/moveit/: controllers.yaml  ros_controllers.yaml  xarm7_urdf.srdf
xarm_control/data/: data.npz  sample.json
xarm_control/data/image/: transforms.json
xarm_control/data/image/colmap_sparse/0/: project.ini
xarm_control/data/image/colmap_text/: cameras.txt  points3D.txt
xarm_control/data/image2colmap/: transforms.json
xarm_control/launch/: test_robot_model.launch  xarm_isaac_execution_camera.launch
xarm_control/model/urdf/: map_frame.urdf.xacro  xarm7_camera.urdf  xarm7_camera.urdf.xacro
xarm_control/model/urdf/camera/: _d435.urdf.xacro
xarm_control/rviz/: urdf.rviz
xarm_control/scripts/: combined_joints_publisher_camera.py  compare_transform.py  generate_target_frame.py  pose_planner.py  rotations.py  save_image.py
xarm_control/srv/: image_save.srv
